Fix problem with z-index in icon menu, add styles to latest posts

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -54,16 +54,6 @@ a {
 
 */
 
-.lazy {
-    @include transition( null, opacity, null);
-    opacity: 0;
-
-    &.loaded {
-        opacity: 1;
-    }
-
-}
-
 img {
     max-width: 100%;
     height: auto;
